# todo_cpp_restful_docker_github_actions_azure

./: CMakeLists.txt  Dockerfile  README.md  create_federated_identity.sh  main.cpp
.github/workflows/: deploy.yml
